# spqr-rust

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
include/: ogdf_compat.hpp  sp_compress.h  spqr_rust_wrapper.hpp  spqr_tree.h
src/: biconnected.rs  connected.rs  ffi.rs  lib.rs  spqr_format.rs  verify.rs  wide.rs
src/sp_compress/: arena.rs  direct.rs  direct_wide.rs  ffi.rs  integration.rs  mod.rs  pmap.rs  pmap32.rs  reconstruct.rs  reconstruct_wide.rs  reduction.rs  reduction32.rs  types.rs  types32.rs  wide.rs
tests/: brute_force.rs
